@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="2.0.0" provider-name="Twilight0">
+<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="2.0.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.tulip" version="2.0.7"/>
@@ -16,7 +16,11 @@
         <language>en el</language>
         <license>GNU General Public License, v3</license>
         <size>633158</size>
-        <news>[B]2.0.0[/B] - 23-06-2018
+        <news>
+[B]2.0.1[/B] - 12-07-2018
+- Revert to client-request for newspaper indexes
+
+[B]2.0.0[/B] - 23-06-2018
 - Rework of modules for dual Python 2/3 compatibility
 - Rework of main menu code
 - Added caching into newspaper section
